--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "domosed",
-  "version": "1.12.2",
+  "version": "1.12.3",
   "description": "Библиотека для работы с API сервиса \"Домосед\"",
-  "main": "src/index",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ub1x/domosed.git"
